[Feat] Turned user into a record